--- a/css/style.css
+++ b/css/style.css
@@ -292,3 +292,33 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   grid-column: span 2;
   grid-row: span 2;
 }
+/* --- Correct Card Sizes --- */
+.course-card.small {
+    width: 366px;
+    height: 550px;
+}
+
+.course-card.big {
+    width: calc(366px * 2 + 25px); /* Two columns + one gap */
+    height: calc(550px * 2 + 25px); /* Two rows + one gap */
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+/* Force all cards to not stretch */
+.course-card img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+/* Fix Courses Container Grid */
+.courses-layout {
+    display: grid;
+    grid-template-columns: repeat(3, 366px);
+    grid-auto-rows: 550px;
+    gap: 25px;
+    justify-content: center;
+    max-width: 1400px;
+    margin: 0 auto;
+}
