--- a/css/style.css
+++ b/css/style.css
@@ -322,3 +322,14 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
     max-width: 1400px;
     margin: 0 auto;
 }
+/* Instead of .courses-layout */
+.courses-container {
+  display: grid;
+  grid-template-columns: repeat(4, 366px);
+  grid-auto-rows: 550px;
+  gap: 25px;
+  justify-content: center;
+  padding: 40px 20px;
+  max-width: 1600px;
+  margin: 0 auto;
+}
