--- a/css/style.css
+++ b/css/style.css
@@ -414,3 +414,18 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
 .course-card[style*="grid-area: ss"] { grid-area: ss; }
 .course-card[style*="grid-area: ps"] { grid-area: ps; }
 .course-card[style*="grid-area: hu"] { grid-area: hu; }
+.courses-container {
+  display: grid;
+  grid-template-columns: repeat(4, 366px);
+  grid-template-rows: repeat(4, 550px);
+  grid-template-areas:
+    "ai cm ql en"
+    "ai lw ig ls"
+    "fa ss hu hu"
+    ".  ps hu hu";
+  gap: 25px;
+  padding: 40px 20px;
+  width: fit-content; /* ⬅ let it grow! */
+  margin-left: auto;
+  margin-right: auto;
+}
