--- a/css/style.css
+++ b/css/style.css
@@ -429,3 +429,11 @@ a:focus, .button:focus { outline: 2px solid #00bcd4; outline-offset: 3px; }
   margin-left: auto;
   margin-right: auto;
 }
+.courses-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: auto;
+    justify-content: normal;
+    width: auto;
+    gap: 20px;
+}
