--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ footer {
   max-width: 1200px;
   margin: 0 auto;
   padding: 40px 20px;
+  background-color: #1c1c1c
 }
 
 .courses-page .intro {
